[package]
name = "vcs"
version = "0.1.0"
edition = "2024"

[lib]
name = "vcs"
path = "src/lib.rs"

[dependencies]
emumemory = { path = "../emumemory" }
emucpu = { path = "../emucpu" }
bevy = { version = "0.18.1",  default-features = false, features = ["2d", "wav"]}

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = true
